fixed z-index on blog menu

--- a/styles/queries.css
+++ b/styles/queries.css
@@ -123,6 +123,7 @@
     visibility: visible;
     transform: translateX(0);
     position: fixed;
+    z-index: 2;
   }
 
   .nav-open .icon-mobile-nav[name='close-outline'] {
